11_ec2.tf
# data "aws_ami" "amzn" {
#   most_recent = ""
#   filter {
#     name   = "name"
#     values = ["amzn2-ami-hvm-*-x86_64-gp2"]
#   }
#   filter {
#     name   = "virtualization-type"
#     values = ["hvm"]
#   }
#   owners = ["amazon"]
# }

resource "aws_instance" "jinseong_weba" {
  ami                    = "ami-04e8dfc09b22389ad"
  instance_type          = "t2.micro"
  key_name               = aws_key_pair.jinseong_key.key_name
  availability_zone      = "ap-northeast-2a"
  private_ip             = "10.0.0.11"
  subnet_id              = aws_subnet.jinseong_subnet_01.id
  vpc_security_group_ids = [aws_security_group.jinseong_sg.id]
  user_data              = file("./install.sh")
}

resource "aws_eip" "jinseong_eip_weba" {
  vpc                       = true
  instance                  = aws_instance.jinseong_weba.id
  associate_with_private_ip = "10.0.0.11"
  depends_on = [
    aws_internet_gateway.jinseong_igw
  ]
}

output "public_ip" {
  value = aws_eip.jinseong_eip_weba.public_ip
}
